# whisper_android_CPP

./: .gitattributes  .gitignore  .gitmodules  bruno.jks  build.gradle  screenshot.bat  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/fonts/: README.txt  atlas.rgba  font.msdf  font.msdf.ascii.bak
app/src/main/assets/shaders/: composite_frag.spv  composite_vert.spv  coverage.spv  msdf_frag.spv  msdf_vert.spv  tiling.spv
app/src/main/cpp/: app.cc  app.hh  audio.cc  audio.hh  main.cc  settings.cc  settings.hh  transcribe.cc  transcribe.hh  ui.cc  ui.hh
app/src/main/java/io/nava/whisper/: MainActivity.java
docs/: model-loading.md
tools/regen_atlas/: README.md
tools/regen_atlas/atlas_gen/: Cargo.toml  dump.rs  test_ab.rs
tools/regen_atlas/atlas_gen/src/: main.rs  test_ab.rs
